feat: update keywords

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "style-config-sensetime",
-  "version": "1.0.0",
-  "description": "style config based in recommended in sensetime dcp",
+  "name": "eslint-config-sensetime",
+  "version": "1.0.1",
+  "description": "shared eslint config based in recommended in sensetime dcp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,5 +24,11 @@
   "repository": {
     "type": "git",
     "url": ""
-  }
+  },
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "config",
+    "javascript"
+  ]
 }
