--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.5.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "prettier-config-sensetime": "^1.0.0"
+
   },
   "repository": {
     "type": "git",
